# marslite_operation_ws

./: .gitignore  README.md  docker_run.sh  export_gazebo_simulation_model.sh  rosbag_record.sh
src/detection_msgs/: CMakeLists.txt
src/detection_msgs/msg/: DetectedObject.msg
src/detection_msgs/srv/: GraspObjectWithID.srv
src/marslite_control/: CMakeLists.txt  README.md  package.xml
src/marslite_control/config/: controllers.yaml  hardware_config.yaml  motion_controller_teleoperation.yaml  shared_control.yaml
src/marslite_control/example/: keyboard_teleoperation_node.cpp  motion_controller_teleoperation_node.cpp  shared_control_node.cpp
src/marslite_control/include/cartesian_control/: cartesian_control_joystick.h  cartesian_control_keyboard.h  cartesian_control_object_grasping.h  joystick_teleoperation.h  keyboard_teleoperation.h  kinematics_constants.h  motion_controller_teleoperation.h  object_grasping.h
src/marslite_control/include/shared_control/: controller_direction_estimator.h  intent_inference.h  shared_control.h  shared_controller.h
src/marslite_control/include/utils/: hybrid_pose.h  rpy.h  tf2_listener_wrapper.h  velocity_estimator.h
src/marslite_control/launch/: keyboard_shared_control.launch  keyboard_teleoperation.launch  motion_controller_bringup.launch  motion_controller_shared_control.launch  motion_controller_teleoperation.launch  test_cartesian_control_joystick.launch  test_cartesian_control_keyboard.launch  test_joystick_shared_control.launch  test_joystick_teleoperation.launch  test_keyboard_shared_control.launch  test_keyboard_teleoperation.launch
src/marslite_control/rviz/: demo.rviz
src/marslite_control/src/: cartesian_control_joystick.cpp  cartesian_control_keyboard.cpp  cartesian_control_object_grasping.cpp  gripper_pose_publisher_node.cpp  shared_control.cpp
src/marslite_control/src/cartesian_control/: joystick_teleoperation.cpp  keyboard_teleoperation.cpp  motion_controller_teleoperation.cpp  object_grasping.cpp
src/marslite_control/src/shared_control/: controller_direction_estimator.cpp  intent_inference.cpp  shared_control.cpp  shared_controller.cpp
src/marslite_control/src/utils/: velocity_estimator.cpp
src/marslite_control/test/: test_cartesian_control.cpp  test_cartesian_control_joystick.cpp  test_cartesian_control_keyboard.cpp  test_detected_object_grasping.cpp  test_detected_object_reaching.cpp  test_first_joint_rotation.cpp  test_intent_inference.cpp  test_joystick_teleoperation.cpp  test_keyboard_teleoperation.cpp  test_object_grasping.cpp  test_shared_control.cpp
src/marslite_description/: CMakeLists.txt  package.xml
src/marslite_description/urdf/: marslite_with_gripper.urdf.xacro
src/marslite_moveit_config/: CMakeLists.txt  package.xml
src/marslite_moveit_config/config/: marslite.srdf  marslite_cartesian_motion_controller.yaml
src/marslite_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  marslite_moveit_controller_manager.launch.xml  marslite_moveit_planning_execution.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/marslite_navigation/: CMakeLists.txt  package.xml
src/marslite_navigation/launch/: teleop_keyboard.launch
src/marslite_navigation/scripts/: teleop_keyboard_node.py
src/marslite_simulation/: CMakeLists.txt  package.xml
src/marslite_simulation/launch/: gazebo_empty.launch  gazebo_supermarket.launch  moveit_planning_gz.launch  spawn_mars.launch
