<?xml version="1.0"?>
<package format="2">
  <name>marslite_description</name>
  <version>1.0.0</version>
  <description>The marslite robot description files</description>
  <maintainer email="ych0610765@gmail.com">HandianYang</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>
</package>