<?xml version="1.0"?>
<package format="2">
  <name>marslite_simulation</name>
  <version>1.0.0</version>
  <description>The simulation for marslite robots</description>
  <maintainer email="ych0610765@gmail.com">HandianYang</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
